# FFPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ffplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  readme.txt
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallback.cpp  JNICallback.h  LogM.h  NativeFFPlayer.cpp  NativeFFPlayer.h  SafeQueue.cpp  SafeQueue.h  ThreadType.cpp  ThreadType.h  VideoChannel.cpp  VideoChannel.h  native-ffplayer-jni.cpp  util.cpp  util.h
app/src/main/java/com/example/ffplayer/: MainActivity.java
app/src/main/java/com/example/ffplayer/listener/: ListenerInfo.java  OnCompletedListener.java  OnErrorListener.java  OnPreparedListener.java  OnProgressListener.java
app/src/main/java/com/example/ffplayer/player/: FFPlayer.java
app/src/main/java/com/example/ffplayer/util/: TimeUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ffplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
